--- a/app/src/main/res/layout/activity_taxi_map.xml
+++ b/app/src/main/res/layout/activity_taxi_map.xml
@@ -12,11 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         
+
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:layout_margin="16dp"
             android:weightSum="10">
 
             <Switch
@@ -25,7 +27,15 @@
                 android:layout_weight="3"
                 android:layout_height="wrap_content" />
 
+            <Button
+                android:id="@+id/btn_find_users"
+                android:layout_weight="7"
+                android:text="Buscando usuarios"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+
         </LinearLayout>
+
 
     </RelativeLayout>
 </fragment>
